--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 739px) {
+@media only screen and (max-width: 1023px) {
     *{
         font-family: sans-serif;
         box-sizing: border-box;  
@@ -65,35 +65,37 @@
         display: flex;
         width: 100%;
         margin-left: 0%;
-        height: 250px;
+        height: 300px;
     }
     .box03_item1{
         width: 50%;
         background-color: #f5f5f5;
-        padding-left: 30px;
+        padding-left: 45px;
         padding-top: 20px;
     }
     .box03_item2{
         width: 50%;
         background-color: #f0f0f0;
-        padding-left: 30px;
+        padding-left: 45px;
         padding-top: 20px;
     }
     .box3_item1-tieude,.box3_item2-tieude{
         font-weight: lighter;
-        font-size: 14px;
+        font-size: 25px;
     }
     .box3_item1-noidung,.box3_item2-noidung{
         color: #B7B7B7;
         text-align: justify;
-        width: 150px;
-        font-size: 8px;
-
+        width: 250px;
+        font-size: 12px;
+        line-height: 16px;
     }
     .box3_item2-noidung .span1{
         display: inline-block;
-        width: 50px;
-        
+        width: 100px;
+    }
+    .box3_item2-noidung{
+        width: 250px;
     }
     .span1{
         font-weight: bold;
@@ -103,10 +105,10 @@
         display: grid;
         margin-left: 0%;
         grid-template-columns: repeat(2,47%);
-        grid-template-rows: 450px 300px 300px;
+        grid-template-rows: 500px 400px auto;
         justify-content: space-around;
-        margin-top: 10px;
-        row-gap: 10px;
+        margin-top: 20px;
+
     }
     .box04__items1,.box04__items2,.box04__items3,.box04__items4,.box04__items5,.box04__items6{
         border: 1px solid  #f0f0f0;
@@ -116,17 +118,18 @@
         align-items:center;
         margin-top: 30px;
         width: 90%;
+        margin-left:5%;
     }
     .box4__tieude{
         font-weight: lighter;
         margin-left: 20px;
-        font-size: 13px;
+        font-size: 25px;
         width: 75%;
         font-weight: bold;
     }
     .icon2{
         color: #bac2c6;
-        font-size: 14px;
+        font-size: 25px;
     }
     .iconheader{
         display: flex;
@@ -135,7 +138,7 @@
         width: 25%;
     }
     .box4__list{
-        margin-left: -15px;
+        margin-left: 0px;
     }
     .box4__list li::marker {
         color: #1a9ddc;
@@ -144,7 +147,7 @@
     .box4__list--tieude--items{
         font-weight: lighter;
         font-size: 12px;
-        margin-left: 10px;
+        margin-left: 35px;
     }
     .box4__content,.time,.box4__sothich--item--text{
         color:#B7B7B7;
@@ -193,7 +196,7 @@
     .box4__boxdiv{
         display: flex;  
         gap: 10px; 
-        margin-left: 18px;
+        margin-left: 40px;
         margin-bottom: 25px;
     }
     .div1,.div2,.div3{
@@ -206,8 +209,16 @@
         background-color: #1a9ddc;
         height: 1px;
     }
+    .box05__content--img{
+        width: 150px;
+        height: 80px;
+    }
+    .box05__content--img{
+        width: 150px;
+        height: 80px;
+    }
     .viewmore{
-        width: 70px;
+        width: 80px;
         height: 15px;
         background-color: #FFFAB3;
         border: 1px solid #FFFAB3;
@@ -215,20 +226,16 @@
         font-weight: lighter;
         border-radius: 10px;
         font-size: 10px;
-        left: 30px;
-        top: 60px;
+        left: 40px;
+        top: 80px;
         display: none;
         cursor: pointer;
         position: absolute;
     }
-    .box05__content--img{
-        width: 150px;
-        height: 80px;
-    }
     .box05{
         width: 100%;
         margin-left: 0%;
-        height: 420px;
+        height: 380px;
         background-color: #f5f5f5;
         margin-top: 30px;
         padding-top: 10px;
@@ -237,41 +244,50 @@
         font-weight: lighter;
         margin-left: 5%;
         margin-bottom: 20px;
-        font-size: 14px;
+        font-size: 20px;
     }
     .box05__item1,.box05__item2{
         display: flex;
-        flex-direction: column;
-        width: 100%;
+        width: 90%;
         margin-left: 5%;
-        margin-bottom: 30px;
+        justify-content: space-between;
+        margin-bottom: 60px;
         position: relative;
-    }
-    .box05__item2{
-        margin-top: -10px;
     }
     .box05__content--list--tieude{
         font-weight: lighter;
-        font-size: 12px;
+        font-size: 10px;
         margin-left: -20px;
         margin-top: -15px;
     }
     .box05__content--list--content{
         color:#B7B7B7;
-        font-size: 10px;
-        line-height: 16px;
-        margin-left: -5px;
-    }
-    .box05__content--01{
-        margin-bottom: 30px;
-    }
-    .box05__content--01::after,.box05__item1::after{
-        display: none;  
+        font-size: 9px;
+        line-height: 21px;
+        margin-left: -15px;
     }
     .box05__content{
         display: flex;
         align-items: start;
+    }
+    .box05__content--01::after{
+        content: " ";
+        display: block;
+        width: 1px;
+        border-radius: 20%;
+        height: 100px;
+        background-color: #e0d0ac;
+        margin-left: 90px;
+    }
+    .box05__item1::after{
+        content: " ";
+        display: block;
         width: 100%;
+        height: 1px;
+        border-radius: 20%;
+        background-color: #e0d0ac;
+        position: absolute;
+        top:130px
     }
     .box06{
         width: 100%;
